--- a/plugins/input-netconf/Makefile
+++ b/plugins/input-netconf/Makefile
@@ -6,4 +6,7 @@ build:
 	docker build -t juniper/open-nti-input-netconf .
 
 run:
-	docker run -t -i -v $(PWD):/data juniper/open-nti /usr/bin/python /data/open-nti.py -c -s 
+	docker run -t -i -v $(PWD):/data juniper/open-nti /usr/bin/python /data/netconf-collector.py -s
+
+telegraf:
+	docker run -t -i -v $(PWD):/data juniper/open-nti telegraf -debug -config /data/telegraf.toml
